refactor: cria e atribui um novo tipo `HeadingProps` para que seja aceito vários `children` em um HeadingComponent

--- a/src/components/Heading.module.css
+++ b/src/components/Heading.module.css
@@ -1,4 +1,6 @@
 .heading {
-    background: purple;
-    color: cyan;
+    display: flex;
+    gap: 2.4rem;
+    align-items: center;
+    justify-content: center;
 }
