--- a/src/components/Logo/styles.module.css
+++ b/src/components/Logo/styles.module.css
@@ -1,8 +1,30 @@
-.logo_wrapper {
-    display: grid;
-    gap: 0.8rem;
+.logo {
+    display: flex;
+    justify-content: center;
+    justify-content: center;
+    gap: 2.4rem;
+    padding: 3.2rem;
+}
+
+.logoLink {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     justify-items: center;
-    color: var(--primary)
+    gap: 0.8rem;
+    color: var(--primary);
+    font-size: 4.2rem;
+    font-weight: bold;
+    text-decoration: none;
+    transition: all 0.15s ease-in-out;
+}
+
+.logoLink:hover {
+    filter: brightness(80%);
+}
+
+.logoLink svg {
+    width: 6.4rem;
+    height: 6.4rem;
 }
